fix(out-2954) align initials more with how it works internally

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,14 +98,11 @@ a {
   }
 }
 
-.avatar {
-  h1 {
-    &.cop-text-xs {
-      font-size: 9px;
-      line-height: 18px;
-      letter-spacing: 0;
-      font-weight: medium;
-    }
+.avatar-xs, .user-company-selector [class*=" mui-"][class*="-control"] {
+  h1.cop-text-xs {
+    font-size: 9px;
+    line-height: 18px;
+    letter-spacing: 0;
   }
 }
 
